begin unsupervised modeling implementation

--- a/analysis/ExperimentComparisons.ipynb
+++ b/analysis/ExperimentComparisons.ipynb
@@ -16,42 +16,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "main_path = os.path.expanduser(\"~/src/locgame/training_scripts/\")"
+    "main_path = os.path.expanduser(\"~/src/locgame/training_scripts/2d_games/\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['egocentered_0_lr0.00025',\n",
-       " 'egocentered_1_lr0.0001',\n",
-       " 'egocentered_2_seed1',\n",
-       " 'egocentered_3_seed2',\n",
-       " 'egocentered_4_lr0.00025']"
+       "['rewtarg_0_seed0_egoCentered1_absoluteCoords0_rew_alpha0.9',\n",
+       " 'rewtarg_1_seed0_egoCentered1_absoluteCoords0_rew_alpha1',\n",
+       " 'rewtarg_2_seed0_egoCentered1_absoluteCoords0_rew_alpha0.7',\n",
+       " 'rewtarg_3_seed121300_egoCentered1_absoluteCoords0_rew_alpha0.9',\n",
+       " 'rewtarg_4_seed121300_egoCentered1_absoluteCoords0_rew_alpha1',\n",
+       " 'rewtarg_5_seed121300_egoCentered1_absoluteCoords0_rew_alpha0.7',\n",
+       " 'rewtarg_6_seed121320_egoCentered1_absoluteCoords0_rew_alpha0.9',\n",
+       " 'rewtarg_7_seed121320_egoCentered1_absoluteCoords0_rew_alpha1']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "exp_folder = \"egocentered\"\n",
+    "exp_folder = \"rewtarg\"\n",
     "model_folders = io.get_model_folders(os.path.join(main_path,exp_folder))\n",
     "model_folders"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +269,7 @@
     }
    ],
    "source": [
-    "idxs = [4]\n",
+    "idxs = \n",
     "df = get_df(main_path, exp_folder, model_folders, idxs)\n",
     "df"
    ]
